# BeCoMe

./: .coderabbit.yaml  .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.test.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AZURE_SETUP_GUIDE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  coverage.xml  greptile.json  pyproject.toml  railway.toml  requirements.txt  sonar-project.properties
.claude/: settings.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: azure-static-web-apps-delightful-tree-0cb32ac03.yml  ci.yml  deploy-backend.yml  deploy-frontend.yml
.greptile/: config.json  files.json  rules.md
api/: README.md  __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  logging_context.py  main.py  schemas.py
api/auth/: dependencies.py  jwt.py  logging.py  password.py  token_blacklist.py
api/db/: README.md  __init__.py  engine.py  models.py  session.py  utils.py
api/middleware/: exception_handlers.py  rate_limit.py  request_logging.py  security_headers.py
api/migrations/: env.py
api/routes/: auth.py  calculate.py  health.py  invitations.py  opinions.py  projects.py  users.py
api/schemas/: __init__.py  auth.py  calculation.py  data_export.py  health.py  internal.py  invitation.py  opinion.py  project.py  result.py  sanitization.py  validators.py
api/services/: base.py  calculation_service.py  data_export_service.py  invitation_service.py  mappers.py  opinion_service.py  password_reset_service.py  project_membership_service.py  project_query_service.py  project_service.py  protocols.py  query_helpers.py  user_service.py
api/utils/: client_ip.py  photo_links.py  sanitization.py
docker/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.azure.yml  docker-compose.yml
docs/: README.md  api-reference.md  architecture.md  environments.md  generate_diagrams.py  method-description.md  quality-report.md  references.md  security.md  uml-diagrams.md
docs/uml-diagrams/: README.md  class-diagram.puml  generate_diagrams.py
examples/: README.md  __init__.py  analyze_budget_case.py  analyze_floods_case.py  analyze_pendlers_case.py  utils.py
examples/cs/: __init__.py  analyze_budget_case.py  analyze_floods_case.py  analyze_pendlers_case.py
examples/data/: README.md  budget_case.txt
examples/en/: __init__.py  analyze_budget_case.py  analyze_floods_case.py  analyze_pendlers_case.py
examples/utils/: __init__.py  analysis.py  data_loading.py  display.py  formatting.py  labels.py  locales.py  runner.py
examples/visualizations/: README.md  __init__.py  visualize_become.ipynb  visualize_become.py
frontend/: .env.development  .env.production  .env.staging  .env.test  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  railway.json  staticwebapp.config.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/coverage/: index.html
frontend/e2e/: accessibility.spec.ts  auth-flow.spec.ts  error-states.spec.ts  full-flow.spec.ts  helpers.ts  invitation-flow.spec.ts  localization.spec.ts  mobile-responsive.spec.ts  navigation.spec.ts  onboarding-flow.spec.ts  profile-flow.spec.ts  project-actions.spec.ts  project-detail.spec.ts  project-list.spec.ts  public-pages.spec.ts  visual-regression.spec.ts  wcag-audit.spec.ts
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: App.test.tsx  utils.tsx
migrations/: env.py
migrations/versions/: 2026_05_30_1444-aa746657b289_baseline_schema.py  2026_05_30_1501-189d6f6fea7b_add_domain_check_constraints.py  2026_05_30_1518-c83186b79ad7_disable_inherited_row_level_security.py  2026_05_30_2244-f3a7c2b9d1e4_hash_password_reset_token.py  2026_06_25_1200-b1d9f4a2c7e3_restrict_project_admin_ondelete.py
scripts/ci/: ci-local.sh  e2e-local.sh  mutmut-run.sh  smoke-test.sh  sonar-local.sh
scripts/db/: backup.sh  roles.sql
src/: README.md  __init__.py  exceptions.py
src/calculators/: __init__.py  base_calculator.py  become_calculator.py  median_strategies.py
src/interpreters/: __init__.py  likert_interpreter.py
src/models/: __init__.py  become_result.py  expert_opinion.py  fuzzy_number.py
supplementary/: OOP.md  SOLID.md  article.tex  writing-rules.md
supplementary/kapitoly/: 1_Uvod.tex  2_Cil prace & metodika.tex  3_Teoreticka vychodiska.tex  4_Vlastni prace.tex  5_Vysledky & diskuse.tex  6_Zaver.tex  literatura.bib
system_design/current/: design_schema.excalidraw  full_description.txt
system_design/old/: func&nonfunc_requirements.txt  load.txt
tests/: README.md  __init__.py  test_become_calculator.py  test_excel_reference.py  test_expert_opinion.py  test_fuzzy_number.py
tests/api/: conftest.py  test_auth.py  test_auth_dependencies.py  test_calculate.py  test_config.py  test_db_cascade.py  test_db_edge_cases.py  test_db_infrastructure.py  test_db_models.py  test_db_opinion_model.py  test_db_postgres_integration.py  test_db_project_model.py  test_db_relationships.py  test_db_schema.py  test_db_transactions.py  test_db_user_model.py  test_db_utils.py  test_health.py  test_internal_schemas.py  test_invitation_service.py  test_invitations.py  test_jwt.py  test_logging.py  test_opinion_service.py  test_opinions.py  test_password.py  test_photo.py  test_project_service.py  test_projects.py  test_schemas.py  test_storage_service.py  test_user_service.py
tests/calculators/: conftest.py  test_arithmetic_mean.py  test_base_calculator.py  test_compromise.py  test_median.py  test_median_strategies.py
tests/data/: __init__.py  excel_cases.py
tests/e2e/: conftest.py  test_account_lifecycle.py  test_auth_flows.py  test_error_scenarios.py  test_gdpr_compliance.py  test_invitation_flow.py  test_multi_user_flow.py  test_password_reset.py  test_permissions.py  test_photo_upload.py  test_project_management.py  test_user_profile.py  test_validation_errors.py
tests/examples/: __init__.py  conftest.py  test_data_loading.py  test_examples_data.py  (+3 more)
(+404 files in other folders)
