[project]
name = "become"
version = "0.1.0"
description = "Python implementation of the BeCoMe group decision-making method"
authors = [{ name = "Ekaterina Kuzmina" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.13",
    "mypy>=1.18",
    "types-python-jose>=3.3",
    "types-passlib>=1.7",
    "types-regex>=2024.0",
]
viz = [
    "numpy>=2.3",
    "pandas>=2.3",
    "matplotlib>=3.10",
    "plotly>=6.0",
    "seaborn>=0.13",
    "openpyxl>=3.1",
]
notebook = [
    "jupyter>=1.1",
    "ipykernel>=7.0",
    "ipywidgets>=8.0",
    "notebook>=7.0",
]
docs = [
    "plantuml>=0.3",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "sqlmodel>=0.0.24",
    "alembic>=1.14",
    "psycopg2>=2.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
    "regex>=2024.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "RUF022",   # `__all__` is not sorted
    "N999",     # invalid module name (BeCoMe has capitals)
    "E402",     # module level import not at top of cell
    "B008",     # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
exclude = [
    "examples/visualizations/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=src", "--cov=api"]

[tool.coverage.run]
data_file = ".coverage"
