[project]
name = "become"
version = "1.0.0b1"
description = "Python implementation of the BeCoMe group decision-making method"
authors = [{ name = "Ekaterina Kuzmina" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-postgresql==8.1.0",
    "hypothesis==6.155.1",
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pip-audit==2.10.0",
    "pip==26.1.2",
    "types-passlib==1.7.7.20260211",
    "types-regex==2026.5.9.20260518",
    "boto3-stubs[s3]==1.43.20",
    "mutmut==3.5.0",
    "locust==2.44.1",
]
viz = [
    "numpy==2.4.6",
    "pandas==3.0.3",
    "matplotlib==3.10.9",
    "plotly==6.7.0",
    "seaborn==0.13.2",
    "openpyxl==3.1.5",
    "graphviz==0.21",
]
notebook = [
    "jupyter==1.1.1",
    "ipykernel==7.2.0",
    "ipywidgets==8.1.8",
    "notebook==7.5.6",
]
docs = []
api = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic-settings==2.14.1",
    "httpx==0.28.1",
    "sqlmodel==0.0.38",
    "alembic==1.18.4",
    "psycopg2==2.9.12",
    "PyJWT==2.13.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.30",
    "email-validator==2.3.0",
    "regex==2026.5.9",
    "boto3==1.43.20",
    "slowapi==0.1.9",
    "bleach==6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "RUF022",   # `__all__` is not sorted
    "N999",     # invalid module name (BeCoMe has capitals)
    "E402",     # module level import not at top of cell
    "B008",     # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
exclude = [
    "examples/visualizations/",
    "migrations/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=src", "--cov=api"]
markers = [
    "e2e: end-to-end tests requiring running server and PostgreSQL",
]
filterwarnings = [
    # SQLite in-memory database cleanup during GC is uncontrollable
    # Warning may come from inspect module when analyzing sqlite objects
    "ignore:unclosed database:ResourceWarning",
]

[tool.coverage.run]
data_file = ".coverage"

[tool.mutmut]
paths_to_mutate = "src/"
runner = "python -m pytest -x -q --assert=plain -c /dev/null tests/unit/models tests/unit/calculators tests/unit/interpreters tests/integration/test_excel_reference.py tests/integration/test_data_loading.py"
